# bot

./: .env.dist  .gitignore  README.md  pyproject.toml  requirements.txt
bot/: __init__.py  __main__.py  cli.py  config.py
bot/handlers/: user.py
bot/handlers/dialog/: user.py
bot/middlewares/: locale.py  repo.py  user.py
bot/services/database/: database.py  models.py
bot/services/database/entities/: __init__.py  user.py
bot/services/integration/: __init__.py  dialog_locale.py
bot/services/locale/: fluent_service.py
bot/services/repository/: __init__.py
bot/services/repository/user/: __init__.py  dto.py
locales/: ru.ftl
src/tgbot/: cli.py  config.py
src/tgbot/handlers/dialog/: user.py
src/tgbot/middlewares/: locale.py
src/tgbot/services/integration/: __init__.py  dialog_locale.py
src/tgbot/services/locale/: __init__.py
src/tgbot/services/repository/: __init__.py
src/tgbot/states/: user.py
tgbot/: __init__.py  __main__.py  cli.py  config.py
tgbot/handlers/: user.py
tgbot/middlewares/: repo.py  user.py
tgbot/services/integration/: dialog_locale.py
tgbot/services/repository/: abstract_repo.py  database.py  repository.py
tgbot/services/repository/user/: models.py  repo.py
